--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.7.1",
+    "@react-native-firebase/app": "^18.2.0",
+    "@react-native-firebase/messaging": "^18.2.0",
     "react": "18.2.0",
     "react-native": "0.71.6"
   },
